# gscore-qqofficial

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
deploy/: gscore-qq.service  install-systemd.sh
gscore_qq/: __init__.py  __main__.py  adapter.py  config.py  models.py  qq_api.py  state.py
scripts/: install-windows-task.ps1
tests/: test_adapter.py
